Modificacion en la conexion

--- a/AdmonSistem/nbproject/private/private.properties
+++ b/AdmonSistem/nbproject/private/private.properties
@@ -1,4 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\USUARIO\\AppData\\Roaming\\NetBeans\\23\\tomcat110.properties
-j2ee.server.home=C:/tomee/apache-tomcat-11.0.13
-j2ee.server.instance=tomcat110:home=C:\\tomee\\apache-tomcat-11.0.13
-user.properties.file=C:\\Users\\USUARIO\\AppData\\Roaming\\NetBeans\\23\\build.properties
+deploy.ant.properties.file=C:\\Users\\Janus\\AppData\\Roaming\\NetBeans\\22\\tomcat110.properties
+file.reference.mysql-connector-j-9.5.0.jar=E:\\DISE\u00d1O\\Taller\\AdmonSistema\\src\\java\\driver\\mysql-connector-j-9.1.0.jar
+j2ee.server.home=C:/Users/Janus/Downloads/apache-tomcat-11.0.14
+j2ee.server.instance=tomcat110:home=C:\\Users\\Janus\\Downloads\\apache-tomcat-11.0.14
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=C:\\Users\\Janus\\AppData\\Roaming\\NetBeans\\22\\build.properties
